resources/ej2-base/releasenotes/UWP/Release-Notes/v17.2.0.46/DocIO.md
## DocIO

### Bug Fixes
{:#DocIO-bug-fixes}

* \#241691 - The ArgumentOutOfRangeException will no longer be thrown while opening a DOC format Word document.
* \#240393 - Line numbers are now preserved properly when resaving the Word document.
* \#242018 - Text encoding issue has been resolved while opening a RTF format Word document.
* \#241885 - Line spacing is now preserved properly while converting a Word document into HTML.
* \#F143774 - Paragraphs are now preserved properly while performing horizontal cell merge in a Word document.
* \#241475 - Nested IF field result is now preserved properly while converting a Word document as a Text file.
List value is now updated properly when converting a Word document to HTML.
* \#237339 - ActualFormatType is now considered as DOCX when creating a new Word document from scratch.
* \#239792 - Character format is applied properly in Inline content control while opening Word document.
* \#239895 - The NullReferenceException will no longer be thrown when updating the fields in the Word document.
* \#239579 - Text border is preserved properly when converting HTML to Word document.
* \#238722 - Character format is applied properly while updating document fields.
* \#F143772 - Nested bookmark is now preserved properly while opening a DOC format Word document.
